[tool.poetry]
name = "toy-kafka-demo"
version = "0.1.0"
description = "Demo for \"Explaining Apache Kafka® using Python datastructures\" talk"
authors = ["Tibs <tibs@tonyibbs.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
textual = {extras = ["dev"], version = "^0.26.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
